Fin seccion 4 - Router

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -14,8 +14,8 @@
         action="index.html"
       >
         <a href="javascript:void(0)" class="text-center db"
-          ><img src="../assets/images/logo-icon.png" alt="Home" /><br /><img
-            src="../assets/images/logo-text.png"
+          ><img src="../../../assets/images/logo-icon.png" alt="Home" /><br /><img
+            src="../../../assets/images/logo-text.png"
             alt="Home"
         /></a>
         <h3 class="box-title m-t-40 m-b-0">Register Now</h3>
