--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -12,13 +12,13 @@
           <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
           <!-- Dark Logo icon -->
           <img
-            src="./assets/images/logo-icon.png"
+            src="../../../assets/images/logo-icon.png"
             alt="homepage"
             class="dark-logo"
           />
           <!-- Light Logo icon -->
           <img
-            src="./assets/images/logo-light-icon.png"
+            src="../../../assets/images/logo-light-icon.png"
             alt="homepage"
             class="light-logo"
           />
@@ -27,12 +27,12 @@
         <!-- Logo text --><span>
           <!-- dark Logo text -->
           <img
-            src="./assets/images/logo-text.png"
+            src="../../../assets/images/logo-text.png"
             alt="homepage"
             class="dark-logo" />
           <!-- Light Logo text -->
           <img
-            src="./assets/images/logo-light-text.png"
+            src="../../../assets/images/logo-light-text.png"
             class="light-logo"
             alt="homepage"
         /></span>
@@ -203,7 +203,7 @@
                   <a href="#">
                     <div class="user-img">
                       <img
-                        src="./assets/images/users/1.jpg"
+                        src="../../../assets/images/users/1.jpg"
                         alt="user"
                         class="img-circle"
                       />
@@ -219,7 +219,7 @@
                   <a href="#">
                     <div class="user-img">
                       <img
-                        src="./assets/images/users/2.jpg"
+                        src="../../../assets/images/users/2.jpg"
                         alt="user"
                         class="img-circle"
                       />
@@ -237,7 +237,7 @@
                   <a href="#">
                     <div class="user-img">
                       <img
-                        src="./assets/images/users/3.jpg"
+                        src="../../../assets/images/users/3.jpg"
                         alt="user"
                         class="img-circle"
                       />
@@ -253,7 +253,7 @@
                   <a href="#">
                     <div class="user-img">
                       <img
-                        src="./assets/images/users/4.jpg"
+                        src="../../../assets/images/users/4.jpg"
                         alt="user"
                         class="img-circle"
                       />
