--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -14,8 +14,8 @@
         action="index.html"
       >
         <a href="javascript:void(0)" class="text-center db"
-          ><img src="../assets/images/logo-icon.png" alt="Home" /><br /><img
-            src="../assets/images/logo-text.png"
+          ><img src="../../../assets/images/logo-icon.png" alt="Home" /><br /><img
+            src="../../../assets/images/logo-text.png"
             alt="Home"
         /></a>
         <div class="form-group m-t-40">
