Fin seccion 6 - Componente Gráfica

--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,42 @@
-<p>grafica1 works!</p>
+<div class="row">
+  <div class="col-6">
+    
+    <app-dona titulo="Ventas"
+              [labels]="labels1"
+              [data]="data1">
+    </app-dona>
+  </div>
+
+
+  <div class="col-6">
+
+    <app-dona titulo="Compras"
+              [labels]="labels2"
+              [data]="data2">
+    </app-dona>
+
+  </div>
+
+</div>
+
+<div class="row">
+
+  <div class="col-6">
+
+    <app-dona titulo="Cambios"
+              [labels]="labels3"
+              [data]="data3">
+    </app-dona>
+
+  </div>
+
+  <div class="col-6">
+
+    <app-dona titulo="Alquileres"
+              [labels]="labels4"
+              [data]="data4">
+    </app-dona>
+
+  </div>
+  
+</div>
