--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,66 @@
-<p>progress works!</p>
+<div class="row">
+
+  <div class="col-12">
+    
+    <div class="card">
+
+      <div class="card-body">
+
+        <h4 class="card-title">Mi progress</h4>
+
+        <div class="progress m-t-20">
+
+          <div
+            class="progress-bar bg-primary progress-bar-striped active"
+            style="height: 10px"
+            [style.width]="getProgreso1"
+            role="progressbar">
+        </div>
+
+        </div>
+
+        <div class="progress m-t-20">
+
+            <div
+              class="progress-bar bg-info progress-bar-striped active"
+              style="height: 10px"
+              [style.width]="getProgreso2"
+              role="progressbar">
+            </div>
+  
+          </div>
+
+      </div>
+
+    </div>
+
+  </div>
+</div>
+
+<div class="row">
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+
+        <app-incrementador (valorSalida)="progreso1 = $event" 
+                            [progreso]="progreso1">
+        </app-incrementador>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+
+        <app-incrementador (valorSalida)="progreso2 = $event"
+                            [btnClass]="'btn-info'"
+                            [progreso]="progreso2">
+        </app-incrementador>
+
+      </div>
+    </div>
+  </div>
+</div>
