--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -353,11 +353,14 @@
               </li>
               <li role="separator" class="divider"></li>
               <li>
-                <a href="#"><i class="ti-settings"></i> Account Setting</a>
+                <a routerLink="/dashboard/account-settings"><i class="ti-settings"></i> Account Setting</a>
               </li>
               <li role="separator" class="divider"></li>
               <li>
-                <a href="#"><i class="fa fa-power-off"></i> Logout</a>
+                <a routerLink="/login">
+                  <i class="fa fa-power-off"></i> 
+                  Logout
+                </a>
               </li>
             </ul>
           </div>
