--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -43,7 +43,9 @@
 
           <ul aria-expanded="false" class="collapse">
             <li *ngFor="let subMenuItem of item.submenu">
-              <a [routerLink]="subMenuItem.url">{{subMenuItem.titulo}} </a>
+              <a [routerLink]="subMenuItem.url"
+                  routerLinkActive="active"
+                  [routerLinkActiveOptions]="{exact:true}">{{subMenuItem.titulo}} </a>
             </li>
           </ul>
 
