Cambios Login, Logout, Auth  y Guard de rutas

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -357,7 +357,7 @@
               </li>
               <li role="separator" class="divider"></li>
               <li>
-                <a routerLink="/login">
+                <a (click)="logout()" class="cursor" style="cursor:pointer">
                   <i class="fa fa-power-off"></i> 
                   Logout
                 </a>
