--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -11,8 +11,10 @@
       <form
         class="form-horizontal form-material"
         id="loginform"
-        (submit)="login()"
-      >
+        autocomplete="off"
+        [formGroup]="loginForm"
+        (ngSubmit)="login()"
+        >
         <a href="javascript:void(0)" class="text-center db"
           ><img src="../../../assets/images/logo-icon.png" alt="Home" /><br /><img
             src="../../../assets/images/logo-text.png"
@@ -22,9 +24,9 @@
           <div class="col-xs-12">
             <input
               class="form-control"
-              type="text"
-              required=""
-              placeholder="Username"
+              type="email"
+              placeholder="email"
+              formControlName="email"
             />
           </div>
         </div>
@@ -33,8 +35,8 @@
             <input
               class="form-control"
               type="password"
-              required=""
               placeholder="Password"
+              formControlName="password"
             />
           </div>
         </div>
@@ -45,6 +47,7 @@
                 id="checkbox-signup"
                 type="checkbox"
                 class="filled-in chk-col-light-blue"
+                formControlName="remember"
               />
               <label for="checkbox-signup"> Remember me </label>
             </div>
@@ -66,6 +69,7 @@
             </button>
           </div>
         </div>
+
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center">
             <div class="social">
@@ -88,10 +92,11 @@
             </div>
           </div>
         </div>
+        
         <div class="form-group m-b-0">
           <div class="col-sm-12 text-center">
             Don't have an account?
-            <a href="pages-register2.html" class="text-primary m-l-5"
+            <a routerLink="/register" class="text-primary m-l-5"
               ><b>Sign Up</b></a
             >
           </div>
