--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -8,10 +8,11 @@
 >
   <div class="login-box card">
     <div class="card-body">
-      <form
-        class="form-horizontal form-material"
+      <form class="form-horizontal form-material"
         id="loginform"
-        action="index.html"
+        autocomplete="off"
+        [formGroup]="registerForm"
+        (ngSubmit)="crearUsuario()"
       >
         <a href="javascript:void(0)" class="text-center db"
           ><img src="../../../assets/images/logo-icon.png" alt="Home" /><br /><img
@@ -25,8 +26,8 @@
             <input
               class="form-control"
               type="text"
-              required=""
               placeholder="Name"
+              formControlName="nombre"
             />
           </div>
         </div>
@@ -35,8 +36,8 @@
             <input
               class="form-control"
               type="text"
-              required=""
               placeholder="Email"
+              formControlName="email"
             />
           </div>
         </div>
@@ -45,8 +46,8 @@
             <input
               class="form-control"
               type="password"
-              required=""
               placeholder="Password"
+              formControlName="password"
             />
           </div>
         </div>
@@ -55,21 +56,34 @@
             <input
               class="form-control"
               type="password"
-              required=""
               placeholder="Confirm Password"
+              formControlName="confirm_password"
             />
           </div>
         </div>
         <div class="form-group row">
           <div class="col-md-12">
             <div class="checkbox checkbox-primary p-t-0">
-              <input id="checkbox-signup" type="checkbox" />
+              <input  id="checkbox-signup" 
+                      type="checkbox" 
+                      formControlName="terminos" />
               <label for="checkbox-signup">
                 I agree to all <a href="#">Terms</a></label
               >
             </div>
           </div>
         </div>
+
+        <div class="row">
+          <div class="col text-danger">
+            <p *ngIf= "campoNoValido('nombre')">* El nombre es obligatorio.</p>
+            <p *ngIf= "campoNoValido('email')">* El email es obligatorio y tiene que ser válido.</p>
+            <p *ngIf= "aceptaTerminos()">* Debe aceptar los terminos de uso.</p>
+            <p *ngIf= "contrasenasNoValidas()">* Las contraseñas deben de ser iguales.</p>
+          </div>
+        </div>
+
+
         <div class="form-group text-center m-t-20">
           <div class="col-xs-12">
             <button
@@ -84,7 +98,7 @@
           <div class="col-sm-12 text-center">
             <p>
               Already have an account?
-              <a href="pages-login-2.html" class="text-info m-l-5"
+              <a routerLink="/login" class="text-info m-l-5"
                 ><b>Sign In</b></a
               >
             </p>
