--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,9 @@
     -webkit-animation-fill-mode:both;
     animation-fill-mode:both
 };
+
+
+#themescolors .selector, .cursor {
+    cursor: pointer;
+}
+
