--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -319,7 +319,7 @@
             aria-haspopup="true"
             aria-expanded="false"
             ><img
-              src="./assets/images/users/1.jpg"
+            [src]="usuario.imagenUrl"
               alt="user"
               class="profile-pic"
           /></a>
@@ -328,13 +328,15 @@
               <li>
                 <div class="dw-user-box">
                   <div class="u-img">
-                    <img src="./assets/images/users/1.jpg" alt="user" />
+                    <img [src]="usuario.imagenUrl" alt="user" />
                   </div>
                   <div class="u-text">
-                    <h4>Steave Jobs</h4>
-                    <p class="text-muted">varun@gmail.com</p>
+                    <h4>{{usuario.nombre}}</h4>
+                    <p class="text-muted">
+                      {{usuario.email | slice:0:20}}{{usuario.email.length > 20 ? '...' : ''}}
+                    </p>
                     <a
-                      href="pages-profile.html"
+                      routerLink="./perfil"
                       class="btn btn-rounded btn-danger btn-sm"
                       >View Profile</a
                     >
@@ -343,7 +345,7 @@
               </li>
               <li role="separator" class="divider"></li>
               <li>
-                <a href="#"><i class="ti-user"></i> My Profile</a>
+                <a routerLink="./perfil"><i class="ti-user"></i> My Profile</a>
               </li>
               <li>
                 <a href="#"><i class="ti-wallet"></i> My Balance</a>
@@ -353,7 +355,7 @@
               </li>
               <li role="separator" class="divider"></li>
               <li>
-                <a routerLink="/dashboard/account-settings"><i class="ti-settings"></i> Account Setting</a>
+                <a routerLink="./account-settings"><i class="ti-settings"></i> Account Setting</a>
               </li>
               <li role="separator" class="divider"></li>
               <li>
