Fin sección 16 - Creado apartado de control de usuarios

--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row animated fadeIn fast">
   <div class="col-6">
     
     <app-dona titulo="Ventas"
@@ -19,7 +19,7 @@
 
 </div>
 
-<div class="row">
+<div class="row animated fadeIn fast">
 
   <div class="col-6">
 
