--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -58,8 +58,7 @@
                 </div>
 
                 <input type="file"
-                        (change)="cambiarImagen($event.target.files[0])"
-                        >
+                        (change)="cambiarImagen($event.target.files[0])">
 
                 <br><br>
 
