--- a/src/styles.css
+++ b/src/styles.css
@@ -9,8 +9,38 @@
     cursor: pointer;
 }
 
+.cursor{
+    cursor: pointer;
+}
+
 .img-avatar{
     height: 200px;
     width: 200px;
+}
+
+.w100{
+    width: 100px;
+}
+.w120{
+    width: 120px;
+}
+
+.avatar{
+    border-radius: 100%;
+    width: 40px;
+}
+
+.fondo-modal-imagen{
+    background-color: rgba( 0, 0, 0, 0.4);
+    top: 0px;
+    height: 100%;
+    left: 0px;
+    position: fixed;
+    width: 100%;
+    z-index: 99;
+}
+
+.oculto {
+    display: none;
 }
 
