--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -33,7 +33,7 @@
             class="has-arrow waves-effect waves-dark"
             href="#"
             aria-expanded="false">
-            <i class="mdi mdi-gauge"></i>
+            <i [class]="item.icono"></i>
             <span class="hide-menu">{{item.titulo}}
               <span class="label label-rouded label-themecolor pull-right">
                 {{item.submenu.length}}
