Fin sección 17 + comentarios añadidos en componentes y servicios importantes

--- a/src/app/components/modal-imagen/modal-imagen.component.html
+++ b/src/app/components/modal-imagen/modal-imagen.component.html
@@ -41,7 +41,7 @@
                     <button type="button" 
                             class="btn btn-danger waves-effect waves-light"
                             (click)="subirImagen()">
-                            Actualiazr foto
+                            Actualizar foto
                     </button>
                 </div>
             </div>
