Fin sección 18. Guards de usuario y validacion de ADMIN_ROLE

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -76,11 +76,13 @@
             href="javascript:void(0)"
             ><i class="ti-search"></i
           ></a>
-          <form class="app-search">
+          <form class="app-search"
+                (submit)="buscar(txtTermino.value)">
             <input
               type="text"
               class="form-control"
-              placeholder="Search & enter"
+              placeholder="Buscar médico, hospital o usuario"
+              #txtTermino
             />
             <a class="srh-btn"><i class="ti-close"></i></a>
           </form>
